apps/web_theme/static/theme/uoa-psd/style.css
a:link, a:visited { color: rgb(0, 127, 187); text-decoration: none; }
a, a:hover, a:active { color: #d30; }
h1, {color: #444}
h2,h3 {
  color:#A7B47C;
}
h2 {
  font-size: 16px;
  font-weight:normal;
}
h3 {
  font-size: 14px;
}

ul li {
  list-style: none;
}
a:hover {
  color:#00a2ee;
}

body {
  color: #333;
  background: #EBEBEB;
  font: normal 12px/1.5em "Lucida Grande", "Helvetica Neue", Arial, sans-serif;
}

hr {
  background: #aaa; 
}

p {
  font-size: 12px;
  line-height: 20px;
}

input.checkbox {
  vertical-align:middle;
}

#header h1 {
  font-size: 28px;
  padding: 5px 0;
  padding-top: 24px;
  margin: 5px 0;
}

.hightlight {
  background-color: #ffc;
}
.small {
  font-size: 11px;
}
.gray {
  color: #999;
}
#header {
  background-color: #025C81;
}

#header h1 {
  font-size: 22px;
  margin:12px 0;
}

#header h1 a:link, #header h1 a:active, #header h1 a:hover, #header h1 a:visited {
  color: #eaeaea;
}

#header-line {
  background-color: #A7B47C;
  height:10px;
}

#main {
  width: 73%;
  background-color: #FFF;
  border-color: #DDDDDD;
  border-left: 1px solid #DDDDDD;
  border-style: solid;
  border-width: 1px;
}

#main .block {
  -moz-border-radius-topleft: 4px;
  -moz-border-radius-topright: 4px;
  padding: 0;
  margin-bottom:20px;
  padding-bottom: 20px;
  background: transparent;
}

#main .block .content {
  /* border-left: 1px solid #ddd;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ccc;
  border-right: 1px solid #ccc; */
  background: #fff;
  padding: 18px;
  overflow:auto;
  border:none;
}

#main .block h2.title {
  margin: 10px 0 5px 0;
  background-color: none;
  padding: 5px 5px 5px 15px;
  font-size:18px;
}

.main_container {
  padding:10px;
}

#footer {
  float:left;
  width:100%;
  background-color: #FFF;
  border:none;
  padding:none;
  height:80px;
  font-size: 10px;
  color:#A7B47C;

}

#footer .block {
  font-size:11px;
  text-align: right;
  background-color: #FFF;
  margin: 15px;
  padding: 8px;
  border-top:2px dotted #A7B47C;
}

#footer a{
  color: #A7B47C;
}

/* #sidebar .block { background: #FFF; padding-bottom:0px; } */

#sidebar .notice {
  background-color: #ffc;
  padding: 0 10px;
  border-bottom:1px solid #ddd;
  border-right:1px solid #ddd;
  border-top:1px solid #fff;
  border-left:1px solid #fff;
}
#sidebar .notice h2 {
  font-size:16px;
  margin: 5px 0;
  border-bottom:1px solid #456;
}
#sidebar .notice p {
  font-size:12px;
}

#sidebar .block {
  padding-bottom: 0;
}

#sidebar .block .content {
  padding: 0 10px;
}


#sidebar h3 {  
  background: #fff;
  border-bottom:1px solid #ccc;
  border-right:1px solid #ccc;
  border-left:1px solid #ddd;
  border-top:1px solid #ddd;
  padding: 5px 10px;
  color: #333;
  font-weight: bold;
}

#sidebar ul li a:link, #sidebar ul li a:visited {
  font-size:12px;
}

#sidebar ul li a:hover, #sidebar ul li a:active {
  background: none;
  color: #444;
  font-size:12px;
  text-decoration:underline;
}
#sidebar ul.navigation li.last a {
  border-bottom: none;
}

#sidebar ul.navigation li a:link,#sidebar ul.navigation li a:visited {
  padding: 5px 10px;
  color:#6a6a6a;
  text-decoration: none;
}
#sidebar ul.navigation li a:hover {
  text-decoration:underline;
}
#sidebar .block .sidebar-block h4 {
  border-bottom: 1px dotted #aaa;
}
#main-navigation ul li {
  background: #456;
  border-top: 1px solid #5C738A;
  color: #eee;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border-corner-shape:bevel;
}

#main-navigation ul li:hover {
  border-top: 1px solid #5C738A;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  background-color: #576C82 !important;
  color: #fff;
}

#main-navigation ul li a:hover {
  color:#025C81;
    background-color:  #A7B47C;

}

#main-navigation ul li.active {
  background-color: #A7B47C !important;
  border-top: 1px solid #FFFFFF;
  color: #FFFFFF !important;
}

#main-navigation ul li a:link, #main-navigation ul li a:visited, #main-navigation ul li a:hover, #main-navigation ul li a:active,
.secondary-navigation ul li a:link, .secondary-navigation ul li a:visited, .secondary-navigation ul li a:hover, .secondary-navigation ul li a:active,
#user-navigation ul li a:link, #user-navigation ul li a:visited, #user-navigation ul li a:hover, #user-navigation ul li a:active {
  text-decoration: none;
  color: #FFF;
}

#user-navigation ul li a:link, #user-navigation ul li a:visited {
  color: #CDE;
  border-bottom: 1px dotted #345;
}

#user-navigation ul li a:hover {
  color: #fff;
  border-bottom: 1px dotted #CDE;
  text-decoration: none;
}

#main-navigation ul li a {
  font-size: 12px;
  padding: 3px 10px;
}

#main-navigation ul li.active a:link, #main-navigation ul li.active a:visited, #main-navigation ul li.active a:hover, #main-navigation ul li.active a:active {
  color: #364b69;
}

.secondary-navigation {
  background: #eaeaea;
  border-bottom: 0px;
}

.secondary-navigation ul li {
  background: #456;
  border-top: 1px solid #5C738A;
  color: #eee;
  margin-right: 5px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.secondary-navigation ul li a {
  padding: 3px 10px;
}

.secondary-navigation ul li.active:hover {
  background: #fff !important;
  border-top: 1px solid #ccc;
  border-right: 1px solid #ccc;
}

.secondary-navigation ul li.active {
  border-top: 1px solid #ddd;
  border-left: 1px solid #ddd;
  border-right: 1px solid #ccc;
  border-bottom: 1px solid #fff;
  margin-bottom: -1px;
  background-color: #fff !important;
  color: #333;
}

.secondary-navigation ul li.active a {
  color: #333;
}

.secondary-navigation ul li:hover {
  border-top-color: #7593B0;
  background-color: #576C82 !important;
  color: #fff;
}

/* pagination */

.pagination em {
  background: #576C82;
  color: #FFF;
  border: 1px solid #7593B0;
  -moz-border-radius:5px;
}

.pagination span.disabled {
  background: #eee;
  color: #aaa;
  border: 1px solid #ddd;
  -moz-border-radius:5px;
}
/* ... */

